# fat_loss_agent

./: .env.example  .gitignore  pyproject.toml
docs/superpowers/plans/: 2026-06-16-fat-loss-agent-mvp.md  2026-06-16-meal-photo-input.md
docs/superpowers/specs/: 2026-06-16-fat-loss-agent-mvp-design.md  2026-06-16-meal-photo-input-design.md
fat_loss_agent/: app.py  config.py
fat_loss_agent/agent/: orchestrator.py  prompts.py  schemas.py
fat_loss_agent/llm/: base.py  qwen_client.py
fat_loss_agent/pages/: meal_chat_page.py  profile_page.py
fat_loss_agent/repositories/: chat_repo.py  db.py  meal_repo.py  profile_repo.py  trace_repo.py
fat_loss_agent/services/: goal_service.py  meal_service.py  nutrition_service.py  photo_service.py  profile_service.py  summary_service.py  trace_service.py  vision_nutrition_service.py
tests/: test_db.py  test_goal_service.py  test_meal_service.py  test_nutrition_service.py  test_orchestrator.py  test_photo_service.py  test_profile_service.py  test_schemas.py  test_trace_service.py  test_vision_nutrition_service.py
