[project]
name = "fat-loss-agent"
version = "0.1.0"
description = "Personal fat-loss agent MVP"
requires-python = ">=3.11"
dependencies = [
  "openai>=1.0.0",
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.1",
  "streamlit>=1.36.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
